--- a/dahlia.css
+++ b/dahlia.css
@@ -131,8 +131,8 @@ a:hover {
     .smallerMenu nav ul {
       display: flex;
       flex-direction: column;     /* CHANGED*/
-      width: 100%;    /*CHANGED PrEv*/
-      align-items: space-evenly;   /*CHANGED from space-around to space-evenly */
+      /*width: 100%;    /*CHANGED*/
+      align-items: center;   /*CHANGED from space-evenly to center */
       justify-content: center;     /*CHANGED PrEv from space-around to spaced-between */
     }
     
