--- a/dahlia.css
+++ b/dahlia.css
@@ -121,7 +121,7 @@ a:hover {
       flex-direction: column;   /*CHANGED PrEv from comment */
       /*flex-wrap: wrap;       CHANGED PrEv to comment */
       align-items: center;   /*CHANGED PrEv from space-around to center */
-      justify-content: space-evenly;    /*CHANGED from center to space-evenly */
+      justify-content: center;    /*CHANGED from space-evenly to center */
     }
     
     .smallerMenu nav:nth-child(1) {
@@ -130,6 +130,7 @@ a:hover {
     
     .smallerMenu nav ul {
       display: flex;
+      align-items: space-evenly;   /* ADDED ******* */
       /*flex-direction: column;     /* CHANGED
       /*width: 100%;    /*CHANGED
       align-items: center;   /*CHANGED from space-evenly to center 
