--- a/dahlia.css
+++ b/dahlia.css
@@ -102,7 +102,7 @@ a:hover {
   (orientation: portrait) {
     
     .menu {
-      height: 40em;   /* CHANGED from 48em */
+      height: 36em;   /* CHANGED from 40em */
     }
     
     ul {
@@ -214,7 +214,7 @@ a:hover {
     }
       
     .symbol p, #flippedSymbol p {
-      line-height: 1.44rem;
+      line-height: 0.72rem;   /*CHANGED from 1.44rem; */
     }
     
     #psi, #psi2 {
