--- a/dahlia.css
+++ b/dahlia.css
@@ -102,7 +102,7 @@ a:hover {
   (orientation: portrait) {
     
     .menu {
-      height: 36em;   /* CHANGED from 40em */
+      height: 12em;   /* CHANGED from 36em */
     }
     
     ul {
@@ -118,7 +118,7 @@ a:hover {
     
     a[tabindex]:focus {
       color: #8DD1FC;
-    } */
+    }
 }
 
 /* ipad mini menu */
@@ -214,7 +214,8 @@ a:hover {
     }
       
     .symbol p, #flippedSymbol p {
-      line-height: 0.72rem;   /*CHANGED from 1.44rem; */
+      font-size: 5.75rem; /*CHANGED*/
+      line-height: 0.72rem;   /*CHANGED PrEv from 1.44rem; */
     }
     
     #psi, #psi2 {
