--- a/dahlia.css
+++ b/dahlia.css
@@ -224,13 +224,13 @@ a:hover {
     }
     
     #psi, #psi2 {
-      margin-right: 0.35rem;    /*CHANGED from padding to margin */
+      padding-right: 3rem;    /*CHANGED from margin-right 0.35rem to padding-right 3rem */
     }
     
     .quote p {
       font-size: 1.75rem;
       line-height: 2.16rem;
-      margin-top: 1.75em;    /*CHANGED this from 2em to 1.75em*/
+      margin-top: 1.5em;    /*CHANGED this from 1.75em to 1.5em*/
     }
     
     #howdy {
