--- a/dahlia.css
+++ b/dahlia.css
@@ -224,7 +224,8 @@ a:hover {
     }
     
     span #psi, span #psi2 {
-      padding-right: 1rem;    /*CHANGED from padding-right 3rem to padding-right 1rem */
+      padding-right: 1rem;
+      margin-right: 1rem;   /*CHANGED from padding-right 3rem to padding-right 1rem */
     }
     
     .quote p {
