--- a/dahlia.css
+++ b/dahlia.css
@@ -261,11 +261,11 @@ a:hover {
       height: 20em;
     }
     
-    #storiesTitle {
+    section div p {
       font-size: 10em;
     }
 
-    #storiesDesc {
+    section div p {
       font-size: 5.75em;
     }
 }
