--- a/dahlia.css
+++ b/dahlia.css
@@ -252,12 +252,13 @@ a:hover {
       line-height: 2.5rem;
     }
     
-    /*section {
+    section {
       height: 100%;
-      width: 100%;        /*nope
-    } */
+      width: 100%;
+    }
     
     #stories {
+      width: 100%;
       height: 20em;
     }
     
