--- a/dahlia.css
+++ b/dahlia.css
@@ -255,20 +255,23 @@ a:hover {
     section {
       height: 100%;
       width: 100%;
+      /*background: url("./Photos/Brown.JPG") no-repeat left bottom;*/
     }
     
     #stories {
       width: 100%;
-      height: 20em;
+      height: 10em;
       font-size: 2em;
     }
     
     #storiesTitle {
+      text-align: center;
       font-size: 2.75rem;
     }
 
     #storiesDesc {
-      font-size: 1.75rem;
+      text-align: center;
+      font-size: 1.5rem;
     }
 }
 /* iPad 1, 2, Mini and Air in Portrait AND Landscape mode*/
