--- a/dahlia.css
+++ b/dahlia.css
@@ -259,8 +259,9 @@ a:hover {
     }
     
     #stories {
+      justify-content: center;
       width: 100%;
-      height: 5em;
+      height: 3em;
       font-size: 3.5em;
     }
     
