--- a/dahlia.css
+++ b/dahlia.css
@@ -255,7 +255,7 @@ a:hover {
     section {
       height: 100%;
       width: 100%;
-      background: url("./Photos/Brown.JPG") no-repeat left center;
+      background: url("./Photos/Brown.JPG") no-repeat bottom center;
     }
     
     #stories {
