--- a/dahlia.css
+++ b/dahlia.css
@@ -263,6 +263,7 @@ a:hover {
       width: 100%;
       height: 7em;
       font-size: 3.5em;
+      color: #8DD1FC;
     }
     
     #storiesTitle {
