--- a/dahlia.css
+++ b/dahlia.css
@@ -277,7 +277,7 @@ a:hover {
     }
     
     .scroll {
-      height: 3.5rem;
+      font-size: 3.5rem;
     }
     
     .links {
@@ -286,20 +286,6 @@ a:hover {
     
     .smallerLinks {
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .smallerLinks div {
-      display: flex;
-      display: row;
-      align-items: center;
-    }
-
-    .smallerLinks div div {
-      margin-left: 0.275em;
-      margin-right: 0.275em;
     }
 
     .smallerStory {
@@ -309,22 +295,16 @@ a:hover {
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 200px;
-      height: 200px;
+      /*width: 200px;
+      height: 200px;*/
+      width: 50%;
+      height: 50%;
       border: 3px dotted #DBA869;
       overflow-y: scroll;
       color: Ivory;
       opacity: 0.8;
       text-align: center;
-    }
-
-    .smallerStory a {
-      font-family: 'Handlee';
-    }
-
-    .smallerStory:hover {
-      box-shadow: 0px 30px 100px rgba(219,168,105,.4);
-    }   
+    }  
 }
 /* iPad 1, 2, Mini and Air in Portrait AND Landscape mode*/
 @media only screen and
