--- a/dahlia.css
+++ b/dahlia.css
@@ -277,11 +277,8 @@ a:hover {
     }
     
     .scroll {
-      font-size: 3.5rem;
-    }
-    
-    .links {
-      display: none;
+      font-size: 2.5rem;
+      text-align: center;
     }
 }
 /* iPad 1, 2, Mini and Air in Portrait AND Landscape mode*/
@@ -480,6 +477,16 @@ section {
     margin-bottom: 2.0em;
   }
 } ********This ^^^^ would work, but looks less good ********* */
+
+@media only screen and
+  (min-device-width: 375px) and
+  (max-device-width: 667px) and
+  (-webkit-min-device-pixel-ratio: 2) and
+  (orientation: portrait) {
+    .links {
+      display: none;
+    }
+}
 
 /*-------Tidbits of Nonsensical Gibberish--------*/
 
