--- a/dahlia.css
+++ b/dahlia.css
@@ -498,7 +498,8 @@ section {
     .smallerLinks div {
       /*margin-top: -1em;   /*need this to be equal as they go down continuously */
       display: flex;
-      display: column;
+      display: row;
+      flex-wrap: wrap;
       align-items: center;
       justify-content: center;
     }
@@ -518,8 +519,8 @@ section {
       justify-content: center;
       /*width: 200px;
       height: 200px;*/
-      width: 500px;
-      height: 500px;
+      width: 400px;
+      height: 400px;
       border: 3px dotted #DBA869;
       overflow-y: scroll;
       color: Ivory;
