--- a/dahlia.css
+++ b/dahlia.css
@@ -512,15 +512,15 @@ section {
     .smallerStory {
       transition: box-shadow 0.95s;
       margin-top: 2.8em;
-      padding-top: 2rem;  /*was 1.3rem*/
+      padding-top: 1.7rem;  /*was 1.3rem*/
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       /*width: 200px;
       height: 200px;*/
-      width: 350px;
-      height: 350px;
+      width: 375px;
+      height: 375px;
       border: 3px dotted #DBA869;
       overflow-y: scroll;
       color: Ivory;
@@ -531,10 +531,12 @@ section {
     .smallerStory a {
       font-family: 'Handlee';
       font-size: 3em;
+      text-align: center;
     }
     
     .smallerStory p {
-      font-size: 2.5em;
+      font-size: 2em;
+      text-align: center;
     }
 
     .smallerStory:hover {
