--- a/dahlia.css
+++ b/dahlia.css
@@ -521,7 +521,7 @@ section {
       justify-content: center;
       /*width: 200px;
       height: 200px;*/
-      width: auto;
+      width: 390px;
       height: 390px;
       border: 3px dotted #DBA869;
       overflow-y: scroll;
