--- a/dahlia.css
+++ b/dahlia.css
@@ -525,7 +525,7 @@ section {
       width: 390px;
       height: 390px;
       border: 3px dotted #DBA869;
-      overflow-y: scroll;
+      overflow-x: scroll;
       color: Ivory;
       opacity: 0.8;
       text-align: center;
