--- a/dahlia.css
+++ b/dahlia.css
@@ -516,7 +516,7 @@ section {
       margin-top: 2.8em;
       padding-top: 1.5rem;  /*was 1.3rem*/
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
@@ -525,7 +525,7 @@ section {
       width: 390px;
       height: 390px;
       border: 3px dotted #DBA869;
-      overflow-x: scroll;
+      overflow-y: scroll;
       color: Ivory;
       opacity: 0.8;
       text-align: center;
