--- a/dahlia.css
+++ b/dahlia.css
@@ -516,10 +516,8 @@ section {
       margin-top: 2.8em;
       padding-top: 1.5rem;  /*was 1.3rem*/
       display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
       /*width: 200px;
       height: 200px;*/
       width: 390px;
@@ -528,7 +526,6 @@ section {
       overflow-y: scroll;
       color: Ivory;
       opacity: 0.8;
-      text-align: center;
     }
 
     .smallerStory a {
