--- a/dahlia.css
+++ b/dahlia.css
@@ -279,6 +279,7 @@ a:hover {
     .scroll {
       font-size: 2.5rem;
       text-align: center;
+      margin-bottom: 1.5em;   /*changed*/
     }
 }
 /* iPad 1, 2, Mini and Air in Portrait AND Landscape mode*/
@@ -489,7 +490,7 @@ section {
 
     .smallerLinks {
       width: 100%;
-      margin-top: 1.5em;   /*changed from 1.25em to 1.5em */
+      margin-top: 1.25em;   /*changed from 1.5em 1.25em */
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -526,7 +527,6 @@ section {
       overflow-y: scroll;
       color: Ivory;
       opacity: 0.8;
-      border-radius: 3%;   /*changed*/
     }
 
     .smallerStory a {
@@ -584,6 +584,18 @@ footer div {
   justify-content: space-evenly;
   align-items: center;
 }
+
+@media only screen and
+  (min-device-width: 375px) and
+  (max-device-width: 667px) and
+  (-webkit-min-device-pixel-ratio: 2) and
+  (orientation: portrait) {
+    footer div {
+      font-size: 3.5rem;
+      line-height: 2rem;
+    }
+}
+      
 
 /* ----------- Videos ------------ */
 
