--- a/dahlia.css
+++ b/dahlia.css
@@ -490,7 +490,7 @@ section {
 
     .smallerLinks {
       width: 100%;
-      margin-top: 1.25em;   /*changed from 1.5em 1.25em */
+      margin-top: 1.2em;   /*changed 1.25em to 1.2em */
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -527,6 +527,7 @@ section {
       overflow-y: scroll;
       color: Ivory;
       opacity: 0.8;
+      border-radius: 3%;
     }
 
     .smallerStory a {
@@ -591,8 +592,13 @@ footer div {
   (-webkit-min-device-pixel-ratio: 2) and
   (orientation: portrait) {
     footer div {
-      font-size: 3.5rem;
-      line-height: 2rem;
+      font-size: 3rem;
+      line-height: 2.5rem;
+    }
+    
+    footer div a {
+      height: 100px;
+      width: 100px;
     }
 }
       
