--- a/dahlia.css
+++ b/dahlia.css
@@ -8,11 +8,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transition: box-shadow 0.95s;
-}
-
-body:hover {
-   box-shadow: 0px 0px 0px rgba(56,82,99,0);
 }
 
 /* Menu */
@@ -230,7 +225,7 @@ a:hover {
     
     .quote p {
       font-size: 2rem;   /* changed from 1.75rem to 2rem */
-      line-height: 2.16rem;
+      line-height: 2.5rem;   /*changed this from 2.16rem to 2.5rem */
       margin-top: 1.5em;
     }
     
@@ -579,6 +574,16 @@ section {
   color: black;
 }
 
+@media only screen and
+  (min-device-width: 375px) and
+  (max-device-width: 667px) and
+  (-webkit-min-device-pixel-ratio: 2) and
+  (orientation: portrait) {
+    #pigeon, #pancake, #apple, #humphrey, #frog, #evergreen {
+      padding-top: 1.5rem;
+    }
+}
+
 
 
 /* footer */
@@ -596,6 +601,11 @@ footer div {
   (max-device-width: 667px) and
   (-webkit-min-device-pixel-ratio: 2) and
   (orientation: portrait) {
+    
+    footer {
+      margin-bottom: -1.5em;    /* Put this here */
+    }
+    
     footer div {
       font-size: 2.5rem;   /*changed from 2.75rem to 2.5rem */
       line-height: 3.5rem;
@@ -604,7 +614,7 @@ footer div {
     footer div a img {
       height: 105px;
       width: 105px;
-      margin-top: 0.1rem;    /*changed this! */
+      margin-top: 0.3rem;    /*changed this! from 0.1rem */
     }
 }
       
@@ -666,7 +676,7 @@ footer div {
   (-webkit-min-device-pixel-ratio: 2) and
   (orientation: portrait) {
     #possum {
-      transform: rotate(-180deg);
+      transform: rotate(270deg);  /*-180 doesn't work, neither does -90*/
     }
 }
  
