--- a/dahlia.css
+++ b/dahlia.css
@@ -579,8 +579,8 @@ section {
   (max-device-width: 667px) and
   (-webkit-min-device-pixel-ratio: 2) and
   (orientation: portrait) {
-    #pigeon, #pancake, #apple, #humphrey, #frog, #evergreen {
-      padding-top: 1.5rem;
+    #pigeon p, #pancake p, #apple p, #humphrey p, #frog p, #evergreen p {
+      padding-top: 6em;
     }
 }
 
@@ -603,18 +603,18 @@ footer div {
   (orientation: portrait) {
     
     footer {
-      margin-bottom: -1.5em;    /* Put this here */
+      margin-bottom: -5.5em;    /* changed from -1.5em to -5.5em */
     }
     
     footer div {
       font-size: 2.5rem;   /*changed from 2.75rem to 2.5rem */
-      line-height: 3.5rem;
+      line-height: 3.5rem;   /*changed from 3.5rem to 2.5rem*/
     }
     
     footer div a img {
-      height: 105px;
-      width: 105px;
-      margin-top: 0.3rem;    /*changed this! from 0.1rem */
+      height: 100px;
+      width: 100px;
+      margin-top: 0.7rem;    /*changed this! from 0.3rem to 0.7rem */
     }
 }
       
@@ -676,7 +676,7 @@ footer div {
   (-webkit-min-device-pixel-ratio: 2) and
   (orientation: portrait) {
     #possum {
-      transform: rotate(270deg);  /*-180 doesn't work, neither does -90*/
+      transform: rotate(360deg);  /*-180 doesn't work, neither does -90 or 270*/
     }
 }
  
