--- a/dahlia.css
+++ b/dahlia.css
@@ -580,7 +580,9 @@ section {
   (-webkit-min-device-pixel-ratio: 2) and
   (orientation: portrait) {
     #pigeon p, #pancake p, #apple p, #humphrey p, #frog p, #evergreen p {
-      padding-top: 6em;
+      /*padding-top: 6em;*/
+      display: flex;
+      flex-direction: column;
     }
 }
 
@@ -603,7 +605,7 @@ footer div {
   (orientation: portrait) {
     
     footer {
-      margin-bottom: -5.5em;    /* changed from -1.5em to -5.5em */
+      margin-bottom: -10.5em;    /* changed from -5.5em -10.5em */
     }
     
     footer div {
