--- a/dahlia.css
+++ b/dahlia.css
@@ -605,18 +605,18 @@ footer div {
   (orientation: portrait) {
     
     footer {
-      margin-bottom: -20.5em;    /* changed from -10.5em to -20.5em */
+      margin-bottom: -20.5em;    /* not sure if this affects anything. --> probably doesn't */
     }
     
     footer div {
-      font-size: 2.5rem;   /*changed from 2.75rem to 2.5rem */
-      line-height: 2.5rem;   /*changed from 3.5rem to 2.5rem*/
+      font-size: 2.5rem;
+      line-height: 2.5rem; 
     }
     
     footer div a img {
       height: 100px;
       width: 100px;
-      margin-top: 0.7rem;    /*changed this! from 0.3rem to 0.7rem */
+      margin-top: 0.7rem;
     }
 }
       
@@ -651,6 +651,21 @@ footer div {
   margin-top: 0.75em;
 }
 
+@media only screen and
+  (min-device-width: 375px) and
+  (max-device-width: 667px) and
+  (-webkit-min-device-pixel-ratio: 2) and
+  (orientation: portrait) {
+    #vidDesc {
+      font-size: 3em;
+    }
+    
+    #allVids {
+      flex-direction: column;
+      width: auto;
+    }
+}
+
 /* ----------- About Me ------------ */
 
 #me {
@@ -658,7 +673,7 @@ footer div {
 }
 
 .heck {
-  margin: 3.3em 0 1.7em 0;
+  margin: 3.3em 0 1em 0;   /*Changed 1.7em (bottom) to 1em*/
 }
 
 #possum {
@@ -679,8 +694,8 @@ footer div {
   (orientation: portrait) {
     #possum {
       transform: rotate(360deg);
-      width: 350px;
-      height: 400px;
+      width: 450px;
+      height: 500px;
     }
 }
  
