--- a/dahlia.css
+++ b/dahlia.css
@@ -658,7 +658,12 @@ footer div {
   (orientation: portrait) {
     #vidDesc {
       font-size: 3em;
-      margin-bottom: 3em;  /*added this... */
+      margin-bottom: 1.5em;  /*changed */
+    }
+    
+    .shorty {
+      width: 300px;
+      height: 500px;
     }
 }
 
