--- a/dahlia.css
+++ b/dahlia.css
@@ -662,8 +662,8 @@ footer div {
     }
     
     .shorty {
-      width: 100%;
-      height: auto;
+      width: auto;
+      height: 100%;
     }
 }
 
