--- a/dahlia.css
+++ b/dahlia.css
@@ -665,6 +665,10 @@ footer div {
       margin-bottom: 0.5em;  /*changed */
     }
     
+    #allVids {
+      align-items: space-evenly;
+    }
+    
     .shorty {
       width: 100%;
       height: 100%;
