--- a/dahlia.css
+++ b/dahlia.css
@@ -245,7 +245,6 @@ a:hover {
       border: 3px dotted #DBA869;
       width: 100%;
       height: 100%;
-      position: fixed;
     }
     
     #gnome span p {
@@ -668,7 +667,7 @@ footer div {
     
     #allVids {
       justify-content: center;
-      align-items: space-evenly;
+      align-items: center;
     }
     
     .shorty {
