--- a/dahlia.css
+++ b/dahlia.css
@@ -756,3 +756,36 @@ footer div {
 #M {
   background-color: #946650;
 }
+
+/* This probably ain't gonna work */
+
+@media only screen and
+  (min-device-width: 375px) and
+  (max-device-width: 667px) and
+  (-webkit-min-device-pixel-ratio: 2) and
+  (orientation: portrait) {
+    .menu {
+      position: fixed;
+      z-index: 5;
+    }
+    
+    .downWithRalph {
+      position: fixed;
+      z-index: 2;
+    }
+    
+    .gummyBear {
+      position: fixed;
+      z-index: 3;
+    }
+    
+    .tea {
+      position: fixed;
+      z-index: 4;
+    }
+    
+    footer {
+      position: fixed;
+      z-index: 1;
+    }
+}
