--- a/dahlia.css
+++ b/dahlia.css
@@ -658,8 +658,8 @@ footer div {
 @media only screen and
   (min-device-width: 375px) and
   (max-device-width: 667px) and
-  (-webkit-min-device-pixel-ratio: 2) and
-  (orientation: portrait) {
+  (-webkit-min-device-pixel-ratio: 2) 
+  /*and (orientation: portrait)*/ {
     #vidDesc {
       font-size: 3em;
       margin-bottom: 0.5em;  /*changed */
@@ -668,11 +668,6 @@ footer div {
     #allVids {
       justify-content: center;
       align-items: center;
-    }
-    
-    .shorty {
-      width: 100%;
-      height: 100%;
     }
 }
 
