--- a/dahlia.css
+++ b/dahlia.css
@@ -766,5 +766,9 @@ footer div {
       width: 100%;
       font-style: 'Raleway';
       font-size: 3em;
-    }  
+    }
+    
+    .mainstory p {
+      font-size: 5em;
+    }
 }
