--- a/dahlia.css
+++ b/dahlia.css
@@ -96,10 +96,14 @@ a:hover {
 
 /* Mobile Menu */
 @media only screen and
-  (min-device-width: 375px) and
+  ((min-device-width: 375px) and
   (max-device-width: 667px) and
   (-webkit-min-device-pixel-ratio: 2) and
-  (orientation: portrait) {
+  (orientation: portrait)),
+  ((min-device-width: 320px) and
+  (max-device-width: 568px) and
+  (-webkit-min-device-pixel-ratio: 2) and
+  (orientation: portrait)){
     
     .menu {
       height: 24em;
